feat(automation): automation 版本更新到2.0.0
使用Java 17，spring boot 3，更新和优化相关依赖
新增删除执行配置的内部调用接口，远程调用接口修改为2.0
执行配置修改为异步
执行配置，执行日志，执行结果，结果票据做分离，整体重构